@@ -332,6 +332,15 @@ public class Fightsess extends Widget {
 
     private int last_button = -1;
     private long last_sent = System.currentTimeMillis();
+    public void use(final int fn) {
+        if(last_button != fn || (System.currentTimeMillis() - last_sent) >= 100) {
+            wdgmsg("use", fn, 1, ui.modflags());
+	    last_button = fn;
+	    last_sent = System.currentTimeMillis();
+	}
+    }
+
+    /*
     public boolean globtype(char key, KeyEvent ev) {
 	if((key == 0) && (ev.getModifiersEx() & (InputEvent.CTRL_DOWN_MASK | KeyEvent.META_DOWN_MASK | KeyEvent.ALT_DOWN_MASK)) == 0) {
 	    int n = -1;
@@ -350,25 +359,11 @@ public class Fightsess extends Widget {
 		    wdgmsg("use", fn, 1, ui.modflags());
 		    last_button = fn;
 		    last_sent = System.currentTimeMillis();
-		/*MapView map = getparent(GameUI.class).map;
-		Coord mvc = map.rootxlate(ui.mc);
-		if(mvc.isect(Coord.z, map.sz)) {
-		    map.delay(map.new Maptest(mvc) {
-			    protected void hit(Coord pc, Coord2d mc) {
-				    // moves that depend on where your mouse pointer is???
-				wdgmsg("use", fn, 1, ui.modflags(), mc.floor(OCache.posres));
-			    }
-
-			    protected void nohit(Coord pc) {
-				wdgmsg("use", fn, 1, ui.modflags());
-			    }
-			});
-		}*/
 		}
 	        //only true if you press one of the actions.length buttons and not all...
 		return (true);
 	    }
 	}
 	return(super.globtype(key, ev));
-    }
+    }*/
 }
