@@ -1,3 +1,6 @@
+3/9/19
+    - Keybinds now include all the hotbars and the fight bars
+
 3/8/19
     - Added in KeyBind system
     - Changed profiler windows to be one window for all of them
